<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>consulo</groupId>
  <artifactId>group</artifactId>
  <version>3-SNAPSHOT</version>

  <packaging>pom</packaging>

  <modules>
    <module>arch/managment</module>
    <module>arch/managment-low-java</module>
    <module>arch/global</module>
    <module>arch/ide</module>

    <module>arch/bind</module>
    <module>arch/bind-java</module>

    <module>arch/ide-java</module>
    <module>arch/ide-api-provided</module>

    <module>distribution</module>

    <module>sandbox/desktop-awt</module>
    <module>sandbox/desktop-swt</module>
    <module>sandbox/web</module>
    <module>sandbox/sand-language-plugin</module>

    <module>modules/desktop-awt/desktop-awt-hacking</module>
    <module>modules/desktop-awt/desktop-awt-ide-impl</module>
    <module>modules/desktop-awt/desktop-awt-bootstrap</module>
    <module>modules/desktop-awt/desktop-awt-eawt-wrapper</module>

    <module>modules/desktop/desktop-ide-impl</module>
    <module>modules/desktop/desktop-bootstrap</module>

    <module>modules/desktop-swt/desktop-swt-bootstrap</module>
    <module>modules/desktop-swt/desktop-swt-ide-impl</module>

    <module>modules/web/web-bootstrap</module>
    <module>modules/web/web-flow-ide</module>

    <module>modules/boot/bootstrap</module>
    <module>modules/boot/container-api</module>
    <module>modules/boot/util-nodep</module>

    <module>modules/base/annotation</module>
    <module>modules/base/builtin-web-server-api</module>
    <module>modules/base/builtin-web-server-impl</module>
    <module>modules/base/base-localize-library</module>
    <module>modules/base/base-icon-library</module>
    <module>modules/base/build-ui-api</module>
    <module>modules/base/build-ui-impl</module>
    <module>modules/base/ide-impl</module>
    <module>modules/base/component-api</module>
    <module>modules/base/application-api</module>
    <module>modules/base/application-content-api</module>
    <module>modules/base/application-ui-api</module>
    <module>modules/base/application-ui-impl</module>
    <module>modules/base/bookmark-api</module>
    <module>modules/base/bookmark-ui-view-api</module>
    <module>modules/base/configurable-api</module>
    <module>modules/base/configuration-editor-api</module>
    <module>modules/base/configuration-editor-impl</module>
    <module>modules/base/disposer-api</module>
    <module>modules/base/disposer-impl</module>
    <module>modules/base/platform-api</module>
    <module>modules/base/platform-impl</module>
    <module>modules/base/localize-api</module>
    <module>modules/base/localize-impl</module>
    <module>modules/base/remote-servers-agent-rt</module>
    <module>modules/base/test-impl</module>
    <module>modules/base/test-junit-impl</module>
    <module>modules/base/virtual-file-system-api</module>
    <module>modules/base/document-api</module>
    <module>modules/base/project-api</module>
    <module>modules/base/project-content-api</module>
    <module>modules/base/module-api</module>
    <module>modules/base/module-content-api</module>
    <module>modules/base/module-content-impl</module>
    <module>modules/base/file-chooser-api</module>
    <module>modules/base/language-api</module>
    <module>modules/base/index-io</module>
    <module>modules/base/datacontext-api</module>
    <module>modules/base/ui-ex-api</module>
    <module>modules/base/project-ui-api</module>
    <module>modules/base/project-ui-impl</module>
    <module>modules/base/navigation-api</module>
    <module>modules/base/code-editor-api</module>
    <module>modules/base/process-api</module>
    <module>modules/base/execution-api</module>
    <module>modules/base/execution-impl</module>
    <module>modules/base/execution-debug-api</module>
    <module>modules/base/execution-debug-impl</module>
    <module>modules/base/execution-coverage-api</module>
    <module>modules/base/execution-test-api</module>
    <module>modules/base/execution-test-impl</module>
    <module>modules/base/execution-test-sm-api</module>
    <module>modules/base/execution-test-thrift-api</module>
    <module>modules/base/extension-preview-recorder-impl</module>
    <module>modules/base/virtual-file-watcher-api</module>
    <module>modules/base/virtual-file-watcher-impl</module>
    <module>modules/base/compiler-api</module>
    <module>modules/base/compiler-impl</module>
    <module>modules/base/language-editor-api</module>
    <module>modules/base/language-impl</module>
    <module>modules/base/document-impl</module>
    <module>modules/base/undo-redo-api</module>
    <module>modules/base/file-editor-api</module>
    <module>modules/base/file-editor-impl</module>
    <module>modules/base/compiler-artifact-api</module>
    <module>modules/base/compiler-artifact-impl</module>
    <module>modules/base/color-scheme-api</module>
    <module>modules/base/color-scheme-impl</module>
    <module>modules/base/ide-api</module>
    <module>modules/base/component-impl</module>
    <module>modules/base/ui-ex-awt-api</module>
    <module>modules/base/virtual-file-system-impl</module>
    <module>modules/base/language-code-style-api</module>
    <module>modules/base/language-code-style-ui-api</module>
    <module>modules/base/language-editor-ui-api</module>
    <module>modules/base/language-editor-impl</module>
    <module>modules/base/language-inject-impl</module>
    <module>modules/base/code-editor-impl</module>
    <module>modules/base/application-impl</module>
    <module>modules/base/component-store-api</module>
    <module>modules/base/component-store-impl</module>
    <module>modules/base/file-template-api</module>
    <module>modules/base/file-template-impl</module>
    <module>modules/base/usage-api</module>
    <module>modules/base/virtual-file-status-api</module>
    <module>modules/base/virtual-file-status-impl</module>
    <module>modules/base/find-api</module>
    <module>modules/base/project-ui-view-api</module>
    <module>modules/base/project-ui-view-impl</module>
    <module>modules/base/diff-api</module>
    <module>modules/base/diff-impl</module>
    <module>modules/base/local-history-api</module>
    <module>modules/base/module-impl</module>
    <module>modules/base/project-impl</module>
    <module>modules/base/application-content-impl</module>
    <module>modules/base/path-macro-api</module>
    <module>modules/base/path-macro-impl</module>
    <module>modules/base/module-ui-api</module>
    <module>modules/base/language-editor-refactoring-api</module>
    <module>modules/base/language-editor-refactoring-impl</module>
    <module>modules/base/language-copyright-api</module>
    <module>modules/base/language-copyright-impl</module>
    <module>modules/base/language-inject-advanced-api</module>
    <module>modules/base/language-inject-advanced-impl</module>
    <module>modules/base/web-browser-api</module>
    <module>modules/base/web-browser-impl</module>
    <module>modules/base/external-service-api</module>
    <module>modules/base/external-service-impl</module>
    <module>modules/base/external-system-api</module>
    <module>modules/base/external-system-impl</module>
    <module>modules/base/external-system-rt</module>
    <module>modules/base/task-api</module>
    <module>modules/base/task-impl</module>
    <module>modules/base/http-api</module>
    <module>modules/base/http-adapter/httpclient4-adapter</module>
    <module>modules/base/http-impl</module>
    <module>modules/base/repository-ui-api</module>
    <module>modules/base/language-spellchecker-api</module>
    <module>modules/base/language-spellchecker-editor-api</module>
    <module>modules/base/language-spellchecker-impl</module>
    <module>modules/base/language-spellchecker-editor-impl</module>
    <module>modules/base/remote-server-api</module>
    <module>modules/base/remote-server-impl</module>
    <module>modules/base/credential-storage-api</module>
    <module>modules/base/credential-storage-impl</module>
    <module>modules/base/tips-of-day-impl</module>

    <module>modules/base/version-control-system-api</module>
    <module>modules/base/version-control-system-impl</module>
    <module>modules/base/version-control-system-distributed-api</module>
    <module>modules/base/version-control-system-log-api</module>

    <module>modules/base/proxy</module>
    <module>modules/base/xcoverage-data</module>
    <module>modules/base/ui-api</module>
    <module>modules/base/ui-impl</module>

    <module>modules/base/util/util-rmi</module>
    <module>modules/base/util/util-lang</module>
    <module>modules/base/util/util-collection</module>
    <module>modules/base/util/util-collection-primitive</module>
    <module>modules/base/util/util-collection-via-trove</module>
    <module>modules/base/util/util-collection-runtime</module>
    <module>modules/base/util/util-concurrent</module>
    <module>modules/base/util/util-dataholder</module>
    <module>modules/base/util/util-jdom</module>
    <module>modules/base/util/util-io</module>
    <module>modules/base/util/util-xml-serializer</module>
    <module>modules/base/util/util-interner</module>
    <module>modules/base/util/util-jna</module>
    <module>modules/base/util/util-xml-fast-reader</module>
    <module>modules/base/util/util-socket-connection</module>
    <module>modules/base/util/util-netty</module>

    <module>modules/base/hacking-java-base</module>

    <module>modules/base/logging/logging-api</module>
    <module>modules/base/logging/logging-slf4j-binding-impl</module>
    <module>modules/base/logging/logging-logback-impl</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <fork>true</fork>
        </configuration>
        <!--workaround for java 9-->
        <dependencies>
          <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-archiver</artifactId>
            <version>2.4.4</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
        <!--workaround for java 9-->
        <dependencies>
          <dependency>
            <groupId>org.codehaus.plexus</groupId>
            <artifactId>plexus-archiver</artifactId>
            <version>2.4.4</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>